PROJECT (uwrapc)

IF(QT4_FOUND)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
QT_WRAP_CPP(uwrapc rpcserver_moc_files  rpcserver.h)
ADD_EXECUTABLE(rpcserver rpcserver.cpp ${QXT_OBJS} ${rpcserver_moc_files})
TARGET_LINK_LIBRARIES(rpcserver ${QT_LIBRARIES})
QT_WRAP_CPP(uwrapc rpcclient_moc_files  rpcclient.h)
ADD_EXECUTABLE(rpcclient rpcclient.cpp ${QXT_OBJS} ${rpcclient_moc_files})
TARGET_LINK_LIBRARIES(rpcclient ${QT_LIBRARIES})
ENDIF(QT4_FOUND)