PROJECT (uwrapc)

IF(QT4_FOUND)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
QT_WRAP_CPP(rpcserver rpcserver_moc_files  rpcserver.h)
QT_WRAP_CPP(rpcserver qxt_other_moc_files qxtboundfunction.h qxtrpcservice.h qxtrpcservice_p.h qxtabstractconnectionmanager.h qxtrpcpeer.h qxttcpconnectionmanager.h qxttcpconnectionmanager_p.h)
SET(QXT_OBJS ${CMAKE_CURRENT_SOURCE_DIR}/qxtrpcservice.cpp ${CMAKE_CURRENT_SOURCE_DIR}/qxtabstractconnectionmanager.cpp ${CMAKE_CURRENT_SOURCE_DIR}/qxtmetaobject.cpp ${CMAKE_CURRENT_SOURCE_DIR}/qxtdatastreamsignalserializer.cpp ${CMAKE_CURRENT_SOURCE_DIR}/qxtrpcpeer.cpp ${CMAKE_CURRENT_SOURCE_DIR}/qxttcpconnectionmanager.cpp ${qxt_other_moc_files})
ADD_EXECUTABLE(rpcserver rpcserver.cpp ${QXT_OBJS} ${rpcserver_moc_files})
TARGET_LINK_LIBRARIES(rpcserver ${QT_LIBRARIES})
QT_WRAP_CPP(rpcclient rpcclient_moc_files  rpcclient.h)
ADD_EXECUTABLE(rpcclient rpcclient.cpp ${QXT_OBJS} ${rpcclient_moc_files})
TARGET_LINK_LIBRARIES(rpcclient ${QT_LIBRARIES})
ENDIF(QT4_FOUND)