PROJECT (uwrapc)


IF(WIN32)
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
	ADD_DEFINITIONS(-D_HDF5USEDLL_)
ENDIF(WIN32)

FIND_PACKAGE(Matlab)


#SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pg")

ADD_EXECUTABLE(minmaxtau_test minmaxtau_test.c minmaxtau.c minmaxL.c)

IF(MATLAB_FOUND)
	ADD_LIBRARY(minmaxtau_mex SHARED minmaxtau_mex.c minmaxtau.c)
	TARGET_LINK_LIBRARIES(minmaxtau_mex ${SPIMAGE_LIBRARY} ${TIFF_LIBRARY} ${HDF5_LIBRARY} ${MATLAB_LIBRARIES})
	SET_TARGET_PROPERTIES(minmaxtau_mex PROPERTIES PREFIX "")
	SET_TARGET_PROPERTIES(minmaxtau_mex PROPERTIES SUFFIX ".mexglx")
	INCLUDE_DIRECTORIES(${MATLAB_INCLUDE_DIR})
	INSTALL(TARGETS minmaxtau_mex
           RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
            LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
            ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/static)

ENDIF(MATLAB_FOUND)

TARGET_LINK_LIBRARIES(minmaxtau_test ${LIBRARY_LIST})





